[gd_scene load_steps=7 format=3 uid="uid://bcd4o74kqdsp3"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_ecb1u"]
[ext_resource type="Script" path="res://scripts/car_to_power_command.gd" id="5_lujon"]
[ext_resource type="Shape2D" uid="uid://b6l4j8pedfymf" path="res://resources/car_capsule_shape.tres" id="5_p33dg"]
[ext_resource type="Script" path="res://scripts/car.gd" id="5_vphul"]
[ext_resource type="Texture2D" uid="uid://dwjnu4c6sm0cb" path="res://assets/sports_car_top_view-800x442.png" id="6_mqmcm"]
[ext_resource type="PackedScene" uid="uid://sr4adyfri778" path="res://scenes/udp_connection.tscn" id="8_2i3tf"]

[node name="Main" type="Node2D" node_paths=PackedStringArray("car")]
script = ExtResource("1_ecb1u")
car = NodePath("Car")

[node name="Rect" type="AspectRatioContainer" parent="."]
offset_left = 2.0
offset_top = -1.0
offset_right = 802.0
offset_bottom = 599.0
ratio = 1.6956

[node name="UDPConnection" parent="Rect" instance=ExtResource("8_2i3tf")]
layout_mode = 2

[node name="logLabel" type="Label" parent="."]
offset_left = 21.0
offset_top = 358.0
offset_right = 296.0
offset_bottom = 589.0
text = "Robot + Godot"
vertical_alignment = 2
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 4
max_lines_visible = 6

[node name="Car" type="CharacterBody2D" parent="."]
position = Vector2(600, 500)
script = ExtResource("5_vphul")
max_speed = 70.0
max_turn_angle = 40.0

[node name="CarSprite" type="Sprite2D" parent="Car"]
position = Vector2(-0.0990855, -47.4924)
rotation = -1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_mqmcm")
offset = Vector2(-216.616, 0.659424)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car"]
position = Vector2(0, -15)
shape = ExtResource("5_p33dg")

[node name="TurnRadius" type="Label" parent="Car"]
visible = false
offset_left = 54.0
offset_top = -33.0
offset_right = 110.0
offset_bottom = -10.0
text = "asdkfja"

[node name="TurnSpeed" type="Label" parent="Car"]
visible = false
offset_left = 54.0
offset_top = 7.0
offset_right = 110.0
offset_bottom = 30.0
text = "asdkfja"

[node name="lbCarSpeed" type="Label" parent="Car"]
visible = false
offset_left = 49.0
offset_top = -59.0
offset_right = 135.0
offset_bottom = -36.0
text = "car speed: "

[node name="CarSpeed" type="Label" parent="Car"]
visible = false
offset_left = 158.0
offset_top = -62.0
offset_right = 244.0
offset_bottom = -39.0
text = "car speed: "

[node name="EspFPSLabel" type="Label" parent="."]
offset_left = 816.0
offset_top = 568.0
offset_right = 902.0
offset_bottom = 591.0
text = "esp 32 fps: "

[node name="CarToPowerCommand" type="Node" parent="." node_paths=PackedStringArray("car")]
script = ExtResource("5_lujon")
car = NodePath("../Car")

[node name="RigidBody2D" type="StaticBody2D" parent="."]
position = Vector2(793, 166)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = ExtResource("5_p33dg")

[node name="CarSprite" type="Sprite2D" parent="RigidBody2D"]
modulate = Color(0.0500001, 1, 0, 1)
position = Vector2(0, -15)
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_mqmcm")
offset = Vector2(100, 0)

[node name="RigidBody2D2" type="StaticBody2D" parent="."]
position = Vector2(1039.85, 166)
rotation = -1.5708

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D2"]
shape = ExtResource("5_p33dg")

[node name="CarSprite" type="Sprite2D" parent="RigidBody2D2"]
modulate = Color(0.0500001, 1, 0, 1)
position = Vector2(0, -15)
rotation = 1.5708
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_mqmcm")
offset = Vector2(100, 0)

[node name="BtnTeste3Segundos" type="Button" parent="."]
offset_left = 80.0
offset_top = 315.0
offset_right = 173.0
offset_bottom = 373.0
text = "acelerar 3s"

[node name="btnPing" type="Button" parent="."]
offset_left = 77.0
offset_top = 395.0
offset_right = 170.0
offset_bottom = 453.0
text = "ping"

[node name="btnLenPic" type="Button" parent="."]
offset_left = 76.0
offset_top = 472.0
offset_right = 169.0
offset_bottom = 530.0
text = "len(pic)"

[node name="btnContarQuadros" type="Button" parent="."]
offset_left = 196.0
offset_top = 472.0
offset_right = 289.0
offset_bottom = 530.0
text = "Contar Quadros
(0)"

[connection signal="pressed" from="BtnTeste3Segundos" to="." method="_on_button_pressed"]
[connection signal="pressed" from="btnPing" to="." method="_on_btn_ping_pressed"]
[connection signal="pressed" from="btnLenPic" to="." method="_on_btn_ping_2_pressed"]
[connection signal="pressed" from="btnContarQuadros" to="." method="_on_btn_contar_quadros_pressed"]
